--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.gugu</groupId>
-    <artifactId>log-audit</artifactId>
+    <groupId>com.gugu.logaudit</groupId>
+    <artifactId>logAudit</artifactId>
+    <properties>
+        <flume.version>1.5.2</flume.version>
+    </properties>
+
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+
     <modules>
         <module>webdemo</module>
     </modules>
