--- a/logetl/pom.xml
+++ b/logetl/pom.xml
@@ -69,12 +69,23 @@
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-http</artifactId>
-            <version>2.2.2</version>
+            <version>${hbase.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-it</artifactId>
             <version>${hbase.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-jdbc</artifactId>
+            <version>${hive-jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-exec</artifactId>
+            <version>${hive.version}</version>、
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/junit/junit -->
@@ -83,7 +94,6 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
-
 
     </dependencies>
 
